# Agentic-AI-Supply-Chain-Copilot

./: index.html  start.bat
Agentic AI Supply Chain Copilot v02/: README.md  pyproject.toml  requirements.txt  setup.py  start.sh
Agentic AI Supply Chain Copilot v02/data/config/: business_profile.json
Agentic AI Supply Chain Copilot v02/frontend/: index.html
Agentic AI Supply Chain Copilot v02/src/: config.py  main.py  run_server.py
Agentic AI Supply Chain Copilot v02/src/agent/: llm_client.py  orchestrator.py
Agentic AI Supply Chain Copilot v02/src/api/: main.py
Agentic AI Supply Chain Copilot v02/src/memory/: vector_store.py
Agentic AI Supply Chain Copilot v02/src/scraper/: news.py
Agentic AI Supply Chain Copilot v02/src/utils/: logging.py
Agentic AI Supply Chain Copilot v03/: start_server.bat
Agentic AI Supply Chain Copilot v03/frontend/: i18n.js
Agentic AI Supply Chain Copilot v03/src/: __init__.py  config.py
Agentic AI Supply Chain Copilot v03/src/api/: main.py
Agentic AI Supply Chain Copilot v03/src/memory/: vector_store.py
Agentic AI Supply Chain Copilot v4/: Project Overview.txt  README.md  TechStack Description.txt  config.json  manager.html  start_server.sh
Agentic AI Supply Chain Copilot v4/frontend/: app.js  index.html
Agentic AI Supply Chain Copilot v4/src/: config.py  main.py
frontend/: index.html
src/: config.py  main.py
src/agent/: orchestrator.py
src/api/: main.py
src/memory/: vector_store.py
src/models/: schema.py
src/scraper/: news.py
src/utils/: embeddings.py
(+6 files in other folders)
